# Lightweight-Container

./: CMakeLists.txt  IPGenerator.py  Makefile  MyContainer.cpp  MyDebugger.hpp
custom_mount_folder/1_Chat Client Server/: client_chat.c  server_chat.c
custom_mount_folder/3_TCP Client-Server Calculator/: client_calc.c  server_calc.c
